--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "static-job-listings-master",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://eehabarbash.github.io/job-listing-demo",
+  "homepage": "http://eehabarbash.github.io/job-listing-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
